# c-cnc23

./: .gitignore  CMakeLists.txt  C_BASICS.md  README.md  block.gp  c-cnc23.code-workspace  data.txt  machine.ini  plot.gp  settings.ini  test.gcode
.github/workflows/: cmake.yml
MATLAB/: Cartesian3DPrinter.m  sm_3d_printer.slx  sm_3d_printer_2022a.slx
MATLAB/SingleAxisExample/: single_axis.slx
MATLAB/s-functions/: mqtt_pub_rapid.m  mqtt_sub_position_new.m
examples/: CMakeLists.txt  README.md
examples/include/: include_guards.h  struct_union.h
examples/src/: 0_hello.c  10_timed.c  11_transform.c  12_encoding.c  1_hello.c  1_types.c  2_basics.c  3_file.c  4_include_guards.c  5_struct_union.c  6_inout_p.c  7_linkedlist.c  8_timed.c  9_timed.c  fsm.h  inout.c  stats.c  vending.dot
examples/vending/: fsm.c  vending.c
src/: axis.c  axis.h  block.c  block.h  defines.h  defines.h.in  fsm.c  fsm.dot  fsm.h  machine.c  machine.h  point.c  point.h  program.c  program.h  toml.c  toml.h
src/main/: c-cnc.c  ccnc.c  ex1.c  ex5.c  hello.c  ini_parse.c  simulate.c
